ae/syrust/syrust_fuzz/petgraph1/fuzz_driver.log
/mnt/sda/xiang/syrust/syrust/petgraph1/./src/astar.rs
/mnt/sda/xiang/syrust/syrust/petgraph1/./src/serde_utils.rs
/mnt/sda/xiang/syrust/syrust/petgraph1/./src/graphmap.rs
err tests_rug_333 test_rug
   Compiling petgraph v0.5.1 (/mnt/sda/xiang/syrust/syrust/petgraph1)
error[E0521]: borrowed data escapes outside of closure
    --> src/graphmap.rs:1064:176
     |
1063 | ...h(|rug_data| {
     |       --------
     |       |
     |       `rug_data` is a reference that is only valid in the closure body
     |       has type `&'1 [u8]`
1064 | ...et Ok((mut rug_fuzz_0, mut rug_fuzz_1, mut rug_fuzz_2, mut rug_fuzz_3, mut rug_fuzz_4)) = <(i32, i32, i32, i32, &str) as arbitrary::Arbitrary>::arbitrary(&mut arbitrary::Unstructured::new(rug_data...
     |                                                                                                                                                                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
     |                                                                                                                                                                   |
     |                                                                                                                                                                   `rug_data` escapes the closure body here
     |                                                                                                                                                                   argument requires that `'1` must outlive `'static`

For more information about this error, try `rustc --explain E0521`.
error: could not compile `petgraph` due to previous error
warning: build failed, waiting for other jobs to finish...

/mnt/sda/xiang/syrust/syrust/petgraph1/./src/matrix_graph.rs
/mnt/sda/xiang/syrust/syrust/petgraph1/./src/iter_format.rs
/mnt/sda/xiang/syrust/syrust/petgraph1/./src/visit/reversed.rs
/mnt/sda/xiang/syrust/syrust/petgraph1/./src/visit/dfsvisit.rs
/mnt/sda/xiang/syrust/syrust/petgraph1/./src/visit/macros.rs
/mnt/sda/xiang/syrust/syrust/petgraph1/./src/visit/filter.rs
/mnt/sda/xiang/syrust/syrust/petgraph1/./src/visit/mod.rs
/mnt/sda/xiang/syrust/syrust/petgraph1/./src/visit/traversal.rs
/mnt/sda/xiang/syrust/syrust/petgraph1/./src/macros.rs
/mnt/sda/xiang/syrust/syrust/petgraph1/./src/scored.rs
/mnt/sda/xiang/syrust/syrust/petgraph1/./src/simple_paths.rs
/mnt/sda/xiang/syrust/syrust/petgraph1/./src/iter_utils.rs
/mnt/sda/xiang/syrust/syrust/petgraph1/./src/data.rs
/mnt/sda/xiang/syrust/syrust/petgraph1/./src/quickcheck.rs
/mnt/sda/xiang/syrust/syrust/petgraph1/./src/csr.rs
/mnt/sda/xiang/syrust/syrust/petgraph1/./src/dijkstra.rs
/mnt/sda/xiang/syrust/syrust/petgraph1/./src/algo/dominators.rs
/mnt/sda/xiang/syrust/syrust/petgraph1/./src/algo/mod.rs
/mnt/sda/xiang/syrust/syrust/petgraph1/./src/isomorphism.rs
/mnt/sda/xiang/syrust/syrust/petgraph1/./src/generate.rs
/mnt/sda/xiang/syrust/syrust/petgraph1/./src/prelude.rs
/mnt/sda/xiang/syrust/syrust/petgraph1/./src/util.rs
/mnt/sda/xiang/syrust/syrust/petgraph1/./src/unionfind.rs
/mnt/sda/xiang/syrust/syrust/petgraph1/./src/traits_graph.rs
/mnt/sda/xiang/syrust/syrust/petgraph1/./src/lib.rs
err tests_rug_619 test_into_weighted_edge
   Compiling petgraph v0.5.1 (/mnt/sda/xiang/syrust/syrust/petgraph1)
error: lifetime may not live long enough
   --> src/lib.rs:322:21
    |
319 |         .for_each(|rug_data| {
    |                    -------- has type `&'1 [u8]`
...
322 |         let mut p0: (EdgeIndex, EdgeIndex, &'static str) = (
    |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ type annotation requires that `'1` must outlive `'static`

error: could not compile `petgraph` due to previous error
warning: build failed, waiting for other jobs to finish...

/mnt/sda/xiang/syrust/syrust/petgraph1/./src/graph_impl/stable_graph/serialization.rs
/mnt/sda/xiang/syrust/syrust/petgraph1/./src/graph_impl/stable_graph/mod.rs
/mnt/sda/xiang/syrust/syrust/petgraph1/./src/graph_impl/frozen.rs
/mnt/sda/xiang/syrust/syrust/petgraph1/./src/graph_impl/serialization.rs
/mnt/sda/xiang/syrust/syrust/petgraph1/./src/graph_impl/mod.rs
/mnt/sda/xiang/syrust/syrust/petgraph1/./src/dot.rs
done
